tests/ui/traits/new-solver/slice-match-byte-lit.stderr
error[E0271]: type mismatch resolving `[u8; 3] <: <[u8] as Index<Range<usize>>>::Output`
  --> $DIR/slice-match-byte-lit.rs:6:9
   |
LL |     match &s[0..3] {
   |           -------- this expression has type `&<[u8] as Index<std::ops::Range<usize>>>::Output`
LL |         b"uwu" => {}
   |         ^^^^^^ types differ

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
